logs/aspose-slides-java-for-python.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IntroductionToPresentation'...
Compiling './lib/python3.5/site-packages/IntroductionToPresentation/__init__.py'...
***   File "./lib/python3.5/site-packages/IntroductionToPresentation/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithCharts'...
Compiling './lib/python3.5/site-packages/WorkingWithCharts/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithCharts/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithPresentation'...
Compiling './lib/python3.5/site-packages/WorkingWithPresentation/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithPresentation/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithShapes'...
Compiling './lib/python3.5/site-packages/WorkingWithShapes/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithShapes/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithSlidesInPresentation'...
Compiling './lib/python3.5/site-packages/WorkingWithSlidesInPresentation/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithSlidesInPresentation/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithSmartArt'...
Compiling './lib/python3.5/site-packages/WorkingWithSmartArt/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithSmartArt/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithTables'...
Compiling './lib/python3.5/site-packages/WorkingWithTables/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithTables/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/WorkingWithText'...
Compiling './lib/python3.5/site-packages/WorkingWithText/__init__.py'...
***   File "./lib/python3.5/site-packages/WorkingWithText/__init__.py", line 7
    print "init func"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aspose_slides_java_for_python-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
